--- a/templates/rt_gantry/css/style1.css
+++ b/templates/rt_gantry/css/style1.css
@@ -806,5 +806,11 @@ div.catItemBody span.catItemDateCreated {
 
 }
 
-
-
+div.bottomBoard {
+	margin: 0px !important;
+	padding: 0px !important;
+	height: 120px;
+}
+div#k2Container {
+	padding:0px !important;
+}
