--- a/templates/frontend/css/template.css
+++ b/templates/frontend/css/template.css
@@ -145,12 +145,14 @@ height:26px;
   width:50px;
 height: 30px;
   overflow:hidden;
-    top: 520px;
+    top: 522px;
     left: -41px;
   float: right;
 position:relative;
 }
-
+.fb_edge_widget_with_comment span.fb_edge_comment_widget iframe.fb_ltr {
+    display: none !important;
+}
 
 /* Media Queries
 *********************************************/
