--- a/templates/frontend/css/template.css
+++ b/templates/frontend/css/template.css
@@ -70,6 +70,7 @@ color:white;
 }
 .ccms_form_element label {
   font-weight:normal !important;
+  color: lightgray;
 }
 .chronoform {
   position:absolute;
