--- a/templates/rt_gantry/css/style2.css
+++ b/templates/rt_gantry/css/style2.css
@@ -1,35 +1,290 @@
 /**
- * @version   3.2.12 October 30, 2011
- * @author    RocketTheme http://www.rockettheme.com
- * @copyright Copyright (C) 2007 - 2011 RocketTheme, LLC
- * @license   http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
- */
+ *  * @version   3.2.12 October 30, 2011
+ *   * @author    RocketTheme http://www.rockettheme.com
+ *    * @copyright Copyright (C) 2007 - 2011 RocketTheme, LLC
+ *     * @license   http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
+ *      */
 
 /* Core */
-body {color: #aaa;}
-#rt-header, #rt-bottom {color: #aaa;}
-.rt-container {background: #333;} 
-a:hover {color: #000;}
-#rt-footer, #rt-copyright {color: #ddd;}
-#rt-sidebar-a {background-color:#404040;}
-#rt-sidebar-b {background-color:#404040;}
-#rt-sidebar-c {background-color:#404040;}
-#gantry-viewswitcher {margin: 5px auto;position: relative;top:auto;right:0;}
+body {
+	color: #333;
+	background: url(../images/body/main_bg.gif) center repeat fixed !important;
+}
+#rt-footer, #rt-copyright {color: #000;}
 
-/* Navigation - Core */
-#rt-menu ul.menu li a, .menutop li.root > .item, .menu-type-splitmenu .menutop li .item {color: #ddd;}
-.menutop li.parent.root > .item span, .menu-type-splitmenu .menutop li.parent .item span {background: url(../images/menus/menutop-daddy.png) 100% 50% no-repeat;}
+#rt-footer .rt-container {
+	background:url('/templates/rt_gantry/images/header/header_bg.gif') !important;
+}
 
-/* Navigation - Hovers */
-#rt-menu ul.menu li a:hover, .menutop li.root > .item:hover, .menutop li.active.root.f-mainparent-itemfocus > .item, .menutop li.root.f-mainparent-itemfocus > .item, .menu-type-splitmenu .menutop li:hover > .item {background: #555;color: #fff;}
+/* Header - General */
+#rt-header {
+	background:url('/templates/rt_gantry/images/header/header_bg.gif');
+	border-bottom: 3px solid white;
+}
+#rt-header .rt-container {
+	background:url(/templates/rt_gantry/images/header/header_globe_big.gif) no-repeat 527px bottom !important;
+	height:105px;
+}
+#rt-header .rt-container #rt-logo {margin:6px 0px 0px 2px;}
+#rt-header .rt-container .rt-grid-2 {margin-left:0px;}
+#rt-header .rt-container .rt-grid-2 .rt-block {
+	top:15px;
+	left:1px;
+	padding:0px;
+}
 
-/* Navigation - Active */
-#rt-menu ul.menu li.active a, #rt-menu ul.menu li.active a:hover, .menutop li.root.active > .item, .menutop li.root.active > .item:hover, .menu-type-splitmenu .menutop li.active .item {background: #333;color: #fff;}
+/* Header - 1px header hack for chrome/safari */
+@media screen {
+	#rt-header .rt-container {width: 959px !important;}}
 
-/* Navigation - Dropdowns */
-.menutop .fusion-submenu-wrapper {background: #555;}
-.menutop .fusion-submenu-wrapper.level3, .menutop .fusion-submenu-wrapper.level4, .menutop .fusion-submenu-wrapper.level5, .menutop .fusion-submenu-wrapper.level6 {background: #616161;}
-.menutop ul li > .item {color: #fff;}
-.menutop ul li > .item:hover, .menutop ul li.f-menuparent-itemfocus > .item {background: #444;color: #ccc;}
-.menutop ul li > .daddy span {background: url(../images/menus/dropdown-daddy.png) 100% 50% no-repeat;}
-.menutop .fusion-grouped ol li > .item {background: url(../images/menus/menu-arrow.png) 5px 50% no-repeat;}
+/* Header - Search */
+.search {float:right;margin-top:-24px;}
+.search .button {position:absolute;
+height: 19px;
+}
+#mod-search-searchword{margin:0px}
+
+
+#rt-content-top {
+    padding: 0px;
+    position: relative;
+}
+#rt-feature {
+	display: none;
+}
+
+/* Content */
+/* .main-content:not(.k2ItemsBlock) {
+	position: absolute;
+	top: 224px;
+	width: 620px;
+} */
+
+.main-content .rt-block {
+	margin:0px 0px 0px 0px;
+	padding:0px;
+}
+
+#rt-main .rt-container, #rt-feature .rt-container, #rt-bottom .rt-container {
+        background:url('/templates/rt_gantry/images/body/content_bg.gif') !important;
+}
+#rt-content-top, #rt-content-bottom {
+	float:left;
+	margin-top: 85px;
+}
+#rt-bottom .rt-container {
+	padding-bottom: 10px;
+}
+ .fb-like {
+	height:33px;
+        background: rgb(0, 0, 0); /* fallback color */
+        background: rgba(0, 0, 0, 0.7);
+    bottom: 0px;
+    left: 0;
+    position: fixed !important;
+    width: 100%;
+	padding:0px 0 0 10px;
+	font-size:22px;
+	text-align: center;
+}
+.fb_ltr {
+	top:5px;
+}
+.menutop {
+	top: 74px !important;
+	left: 309px !important;
+}
+.item:hover  {
+	background:none;
+}
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item519 a.item  {
+	background:url(/templates/rt_gantry/images/menus/nav_home.png) !important;
+	width:64px;
+	height:31px;
+}
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item519 a.item span {
+	text-indent:-5000px;
+}
+
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item520 a.item  {
+	background:url(/templates/rt_gantry/images/menus/nav_videos.png) !important;
+	width:79px;
+	height:31px;
+	margin-left:4px;
+}
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item520 a.item span {
+	text-indent:-5000px;
+}
+
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item521 a.item  {
+	background:url(/templates/rt_gantry/images/menus/nav_photos.png) !important;
+	width:86px;
+	height:31px;
+	margin-left:4px;
+}
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item521 a.item span {
+	text-indent:-5000px;
+}
+
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item522 a.item  {
+	background:url(/templates/rt_gantry/images/menus/nav_sports.png) !important;
+	width:64px;
+	height:31px;
+	margin-left:4px;
+}
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item522 a.item span {
+	text-indent:-5000px;
+}
+
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item524 a.item  {
+	background:url(/templates/rt_gantry/images/menus/nav_celebs.png) !important;
+	width:86px;
+	height:31px;
+	margin-left:4px;
+}
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item524 a.item span {
+	text-indent:-5000px;
+}
+
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item523 a.item  {
+	background:url(/templates/rt_gantry/images/menus/nav_gaming.png) !important;
+	width:79px;
+	height:31px;
+	margin-left:4px;
+}
+.rt-fusionmenu .nopill .rt-menubar .menutop li.item523 a.item span {
+	text-indent:-5000px;
+}
+.item538 {
+	display: none;
+}
+.copytext {
+	width: 100%;
+	text-align:center;
+	color:silver;
+}
+#rt-header .rt-container .rt-grid-10 {
+	height:10px;
+}
+#rt-header .rt-container .rt-grid-10 .rt-block {
+	float:right;
+	width:200px;
+}
+.footer .rt-block, .contact .rt-block {
+	height:15px;
+	margin: 0;
+	padding:10px 0 15px 0;
+}
+.menucontact_menu .rt-block {
+	margin: 0;
+	padding: 10px 0 0 0;
+}
+ul.menucontact_menu {
+	display: inline-block;
+	margin-left:342px;
+}
+
+.menucontact_menu li {
+    height: auto;
+    list-style: none outside none;
+    margin: 0;
+    padding: 5px;
+    padding-right:0px;
+    position: relative;
+    font-family: Helvetica,Arial,FreeSans,sans-serif;
+    float:left;
+    color:silver;
+    line-height:1.7em;
+}
+.menucontact_menu li:after {content:" | "}
+.menucontact_menu li:last-child:after {content: ""}
+.menucontact_menu a {
+	color:silver;
+	font-size: 1.1em;
+}
+
+.sharepoint {
+	float:right;
+	margin-top:2px;
+	height: 10px;
+	width:100%;
+	text-align:center;
+}
+.itp-sharepoint {
+	width: 100px;
+	left: -110px;
+	position:absolute;
+}
+div.itp-sharepoint div {
+	background: url("/templates/rt_gantry/images/body/content_bg.gif");
+	padding: 4px;
+	position:relative;
+	border: 1px solid #5F9EA0;
+	height:20px;
+	text-align: left;
+	width: auto;
+	float: none;
+	margin: 0px;
+	/*width: 64px;*/
+}
+div div.facebook_button_bg {
+	float: left;
+	position: fixed;
+	bottom: 4px;
+	left: 4px;
+	z-index: 1000;
+}
+
+div.bul_contents {
+	height: 1280px;
+	background: url("/templates/rt_gantry/images/bulimia-bg_rev2.jpg");
+}
+#rt-main div div.rt-grid-12 {
+	margin:0px;
+	padding:0px;
+	width:960px !important;
+}
+#rt-main div div.rt-grid-12 .rt-block {
+	padding:0px;
+	margin:0px;
+}
+.itemBody, .itemView {
+	padding:0px !important;
+	margin:0px !important;
+}
+.itp-sharepoint {
+	left: -100px !important;
+	top: 100px;
+}
+.bul_video {
+	width:800px;
+	height:460px;
+	background-color:black;	
+	top:312px;
+	position: relative;
+	margin-left: 80px;
+	display: table;
+	padding-top:10px;
+}
+.bul_ad {
+	position: relative;
+	left: 116px;
+	top:340px;
+}
+.bul_ad div#blank1BM {
+	width: 100%;
+}
+.bul_info {
+    color: graytext;
+    font-family: Tahoma;
+    font-size: 19px;
+    margin: 0 126px;
+    position: relative;
+    text-align: center;
+    top: 330px;
+}
+#rt-bottom {
+    float: left;
+    height: 0;
+    overflow: hidden;
+}
