--- a/templates/rt_gantry/css/style1.css
+++ b/templates/rt_gantry/css/style1.css
@@ -444,7 +444,21 @@ span.itemImage img {
     padding: 0 0 0 15px;
     width: 110px;
 }
- .fb-like {
+
+#fb_container {
+	width: 550px;
+	margin: 0 auto;
+}
+
+ #bottom_text {
+	float: left;
+	margin-top: 7px;
+	color: white;
+}
+ #fb-like {
+	float: right;
+}
+ #bottom_status {
 	height:33px;
         background: rgb(0, 0, 0); /* fallback color */
         background: rgba(0, 0, 0, 0.7);
@@ -453,7 +467,7 @@ span.itemImage img {
     position: fixed !important;
     width: 100%;
 	padding:0px 0 0 10px;
-	font-size:22px;
+	font-size:18px;
 	text-align: center;
 }
 .fb_ltr {
