top bar and bottom bar text

--- a/templates/rt_gantry/css/style1.css
+++ b/templates/rt_gantry/css/style1.css
@@ -446,7 +446,7 @@ span.itemImage img {
 }
 
 #fb_container {
-	width: 550px;
+	width: 330px;
 	margin: 0 auto;
 }
 
@@ -455,8 +455,9 @@ span.itemImage img {
 	margin-top: 7px;
 	color: white;
 }
- #fb-like {
-	float: right;
+.fb-like {
+	/*float: right;*/
+	padding-top:7px;
 }
  #bottom_status {
 	height:33px;
