--- a/templates/rt_gantry/css/style2.css
+++ b/templates/rt_gantry/css/style2.css
@@ -76,7 +76,21 @@ height: 19px;
 #rt-bottom .rt-container {
 	padding-bottom: 10px;
 }
- .fb-like {
+#fb_container {
+	width: 330px;
+	margin: 0 auto;
+}
+
+ #bottom_text {
+	float: left;
+	margin-top: 7px;
+	color: white;
+}
+.fb-like {
+	/*float: right;*/
+	padding-top:7px;
+}
+ #bottom_status {
 	height:33px;
         background: rgb(0, 0, 0); /* fallback color */
         background: rgba(0, 0, 0, 0.7);
@@ -85,12 +99,13 @@ height: 19px;
     position: fixed !important;
     width: 100%;
 	padding:0px 0 0 10px;
-	font-size:22px;
+	font-size:18px;
 	text-align: center;
 }
 .fb_ltr {
 	top:5px;
 }
+
 .menutop {
 	top: 74px !important;
 	left: 309px !important;
@@ -296,4 +311,49 @@ div.bul_contents {
 }
 .blank_container {
     display: none;
+}
+/* top drawer layout */
+#rt-drawer {
+	width: 100%;
+	background-color: #ffffff;
+}
+#rt-drawer .rt-container,
+#rt-drawer .rt-grid-12 {
+	width: 960px;
+	margin: 0px auto;
+	padding: 0px;
+	display: table;
+} 
+#rt-drawer .rt-block {
+	padding: 0px;
+	margin: 0px;
+}
+#rt-drawer .rt-grid-12 div {
+	height: 35px;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+/* status bar */
+.top_status {
+	float:left;
+}
+
+/* social links */
+.top_social {
+	float: right;
+	padding-right: 10px;
+}
+
+/* search box */
+.top_search {
+	width: 200px;
+	float: right;
+}
+.inputboxtop_search {
+	margin: 0px;
+	width: 97%;
+}
+.pad_top {
+	margin-top:350px;
 }
