--- a/templates/rt_gantry/css/style2.css
+++ b/templates/rt_gantry/css/style2.css
@@ -253,7 +253,7 @@ div div.facebook_button_bg {
 
 div.bul_contents {
 	height: 1280px;
-	background: url("/templates/rt_gantry/images/bulimia-bg_rev2.jpg");
+	background: url("/templates/rt_gantry/images/bulimia-bg_rev5.jpg");
 }
 #rt-main div div.rt-grid-12 {
 	margin:0px;
@@ -272,11 +272,13 @@ div.bul_contents {
 	left: -100px !important;
 	top: 100px;
 }
+#bul_Player {
+}
 .bul_video {
 	width:800px;
 	height:450px;
-	background-color:black;	
-	top:312px;
+	background-color:#99CCCC;	
+	top:242px;
 	position: relative;
 	margin-left: 72px;
 	display: table;
@@ -285,12 +287,86 @@ div.bul_contents {
 .bul_ad {
 	position: relative;
 	left: 114px;
-	top:340px;
+	top:263px;
 	width: 728px;
 	height: 90px;
 	margin-bottom:30px;
 	border: 2px solid #99cccc;
 	background-color: #D3D3D3;
+}
+.bul_undervidLinks {
+	position: relative;
+	left: 72px;
+	top: 236px;
+	width: 816px;
+	height: 64px;
+	background-color: #99cccc;
+}
+.bul_undervidLinks .linkItem {
+	position: absolute;
+}
+.bul_undervidLinks #rightTB {
+	color: #5c5c5c; 
+	font-size: 8pt; 
+	font-family: tahoma,arial,helvetica,sans-serif; 
+	text-transform: uppercase;
+	right: 8px;
+}
+.bul_undervidLinks #linkDM {
+	left: 8px;
+	bottom: 6px;
+}
+.bul_undervidLinks #linkYT {
+	left: 51px;
+	bottom: 6px;
+}
+.bul_undervidLinks #linkVIM {
+	left: 94px;
+	bottom: 6px;
+}
+.bul_undervidLinks #linkAMZ {
+	right: 94px;
+	bottom: 6px;
+}
+.bul_undervidLinks #linkITunes {
+	right: 51px;
+	bottom: 6px;
+}
+.bul_undervidLinks #linkSPOT {
+	right: 8px;
+	bottom: 6px;
+}
+.bul_undervidLinks .linkItemVid {
+	position: absolute;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box; /* Firefox */
+	-webkit-box-sizing: border-box; /* Safari */
+	width: 90px;
+	height: 52px;
+	background-color: #000000;
+	text-align: center;
+	vertical-align: middle;
+	display: inline-block;
+	
+}
+.bul_undervidLinks a {
+	color: #FFFFFF;
+	vertical-align: middle;
+	padding-top: 12px;
+	line-height: 14px;
+	display: block;
+}
+.bul_undervidLinks #filmLink {
+	left: 265px;
+	bottom: 6px;
+}
+.bul_undervidLinks #trailerLink {
+	left: 315px;
+	bottom: 6px;
+}
+.bul_undervidLinks #behindLink {
+	left: 415px;
+	bottom: 6px;
 }
 .bul_ad div#blank1BM {
 	width: 100%;
@@ -298,11 +374,12 @@ div.bul_contents {
 .bul_info {
     color: graytext;
     font-family: Tahoma;
-    font-size: 19px;
+    font-size: 16px;
     margin: 0 126px;
     position: relative;
     text-align: center;
-    top: 330px;
+    top: 252px;
+    text-transform: uppercase;
 }
 #rt-bottom {
     float: left;
