centered bottom leaderboard

--- a/templates/rt_gantry/css/style1.css
+++ b/templates/rt_gantry/css/style1.css
@@ -842,6 +842,10 @@ div.bottomBoard {
 	padding: 0px !important;
 	height: 120px;
 }
+div.bottomBoard .rt-block {
+	margin: 0 auto;
+	width: 728px;
+}
 div#k2Container {
 	padding:0px !important;
 }
