--- a/plugins/jsnimageshow/themeclassic/assets/js/galleria/themes/classic/galleria.classic.css
+++ b/plugins/jsnimageshow/themeclassic/assets/js/galleria/themes/classic/galleria.classic.css
@@ -63,16 +63,14 @@
     background: url(classic-loader.gif) no-repeat 2px 2px;
 }
 .galleria-info {
-    width: 50%;
-    left: 15px;
-    z-index: 2;
-    position: absolute;
+    height: 7% !important;
 }
 .galleria-info-text {
     border-bottom: 1px solid black;
-  background: #aaaaaa !important;
+    background: #aaaaaa !important;
     padding: 3px 3px 3px 17px !important;
     display: none;
+    height: 100% !important;
     /* IE7 */ zoom:1;
 }
 .galleria-info-title {
@@ -82,7 +80,7 @@
 }
 .galleria-info-description {
     margin: 0;
-    color: #bbb;
+    color: yellow !important;
 }
 .galleria-info-close {
     width: 9px;
@@ -91,36 +89,16 @@
     top: 5px;
     right: 5px;
     background-position: -753px -11px;
-    opacity: .5;
-    filter: alpha(opacity=50);
     cursor: pointer;
     display: none;
 }
-.notouch .galleria-info-close:hover{
-    opacity:1;
-    filter: alpha(opacity=100);
-}
-.touch .galleria-info-close:active{
-    opacity:1;
-    filter: alpha(opacity=100);
-}
 .galleria-info-link {
     background-position: -669px -5px;
-    opacity: .7;
-    filter: alpha(opacity=70);
     position: absolute;
     width: 20px;
     height: 20px;
     cursor: pointer;
     background-color: #000;
-}
-.notouch .galleria-info-link:hover {
-    opacity: 1;
-    filter: alpha(opacity=100);
-}
-.touch .galleria-info-link:active {
-    opacity: 1;
-    filter: alpha(opacity=100);
 }
 .galleria-image-nav {
     position: absolute;
@@ -132,8 +110,6 @@
 }
 .galleria-image-nav-left,
 .galleria-image-nav-right {
-    opacity: .3;
-    filter: alpha(opacity=30);
     cursor: pointer;
     width: 62px;
     height: 124px;
@@ -147,16 +123,6 @@
     right: 10px;
     background-position: -254px 46px;
     z-index: 2;
-}
-.notouch .galleria-image-nav-left:hover,
-.notouch .galleria-image-nav-right:hover {
-    opacity: 1;
-    filter: alpha(opacity=100);
-}
-.touch .galleria-image-nav-left:active,
-.touch .galleria-image-nav-right:active {
-    opacity: 1;
-    filter: alpha(opacity=100);
 }
 .galleria-thumb-nav-left,
 .galleria-thumb-nav-right {
@@ -176,28 +142,6 @@
     right: 0;
     left: auto;
 }
-.galleria-thumbnails-container .disabled {
-    opacity: .2;
-    filter: alpha(opacity=20);
-    cursor: default;
-}
-.notouch .galleria-thumb-nav-left:hover,
-.notouch .galleria-thumb-nav-right:hover {
-    opacity: 1;
-    filter: alpha(opacity=100);
-    background-color: #111;
-}
-.touch .galleria-thumb-nav-left:active,
-.touch .galleria-thumb-nav-right:active {
-    opacity: 1;
-    filter: alpha(opacity=100);
-    background-color: #111;
-}
-.notouch .galleria-thumbnails-container .disabled:hover {
-    opacity: .2;
-    filter: alpha(opacity=20);
-    background-color: transparent;
-}
 
 .galleria-carousel .galleria-thumb-nav-left,
 .galleria-carousel .galleria-thumb-nav-right {
@@ -211,11 +155,11 @@
 .galleria-image-nav-right {
     background-image: url(classic-map.png);
     background-repeat: no-repeat;
- margin-top: 163px;
+    margin-top: 163px;
 }
- 
+
 .galleria-image-nav-right:after {
- background: red;
+    background: red;
     color: #fff !important;
     content: "Next >>";
     display: block;
@@ -223,27 +167,25 @@
     font-weight: bold;
     margin-top: 6%;
     text-transform: uppercase;
-	width: 135px;
+    width: 135px;
 }
 .galleria-image-nav-right {
     border-top: 1px solid black;
-background-color: #999;
+    background-color: #999;
     height: 50px;
     width: 24.9% !important;
 }
 .galleria-image-nav-left {      
     border-top: 1px solid black;
-  width:75.9% !important;
-background-color: #999;       
-height: 50px;   
- 
- 
+    width:75.9% !important;
+    background-color: #999;       
+    height: 50px;   
 }
 .galleria-image-nav {
-top: 68% !important;
+    top: 68% !important;
 }
 .galleria-image-nav-left:after {
-     background: red;
+    background: red;
     color: #fff !important;
     content: "<< Prev";
     display: block;
@@ -253,126 +195,72 @@ top: 68% !important;
     margin-right: 30px;
     margin-top: 2%;
     text-transform: uppercase;
-	width: 135px;
-	}
+    width: 135px;
+}
 .galleria-stage {
-position: absolute;
-  top: 0px !important;  
-  left:  0px !important;   
-  right: 0px !important;  
-overflow: hidden;   
+    top: 0px !important;  
+    left:  0px !important;   
+    right: 0px !important;  
+    overflow: hidden;   
 }    
- 
- #jsn-themeclassic-jsgallery-qGCiP .galleria-info .galleria-info-text .galleria-info-title{color: #ffff4a;
- font-weight:regular !important;
- font-size: 18px !important;}
- 
+.galleria-info .galleria-info-text .galleria-info-title{color: #ffff4a;
+    font-weight:regular !important;
+    font-size: 18px !important;
+}
 
 @media (min-width: 320px) and (max-width: 480px) {
-  div.catItemHeader {  
-    padding-bottom: 5px;
-  }
-  div div.catItemHeader h3.catItemTitle {
-    width: 100% !important;   font-size: 15px !important;
-  }
-  .galleria-container.notouch {
-    height: 459px !important;
-    width: 288px !important;
-  }
-  .galleria-image-nav-left:after {
-
-    font-size: 15px !important; 
-    margin-right: 14px !important;
-    margin-top: 11px !important ;
-    padding: 3px;
-  }
-  .galleria-image-nav-left { 
-    width: 70% !important;
-  }
-  .galleria-image-nav-right:after {  
-    font-size: 15px !important;
-    margin-top: 11px;
-    padding: 3px;
-  }
-  .galleria-image-nav-left:after {
-    width: 70px
-  }
-  .galleria-info-text {
-  }
-  .galleria-image-nav-right:after {
-    width: 70px;
-  }
-  .galleria-image-nav-right {    
-    width: 30.3% !important;
-  }
-  .galleria-counter {
-    bottom: 10px;  
-    font: bold 21px/1 arial,sans-serif;
-    left: 15px !important;
-  }
-  div.catItemIntroText img {   
-    top: 0 !important;
-  }
-  #jsn-themeclassic-jsgallery-XahKjrbt > div {
-    max-width: 30%;
-    width: 100%;
-  }
-  #jsn-themeclassic-jsgallery-wawbpQrx > div {
-    max-width: 30%;
-    width: 100%;
-  }
-  .sharepoint {
-    float: right;   
-    margin-top: 2px;
-    text-align: left !important;
-    width: 82% !important;
-}
-div.itemIntroText img {
-    height: 417px !important;
-    top: 0 !important;
-}
-div.itemHeader h2.itemTitle{
-font-size: 10px !important;
-     
-    max-width: 47%;}
-	.jsn-gallery {
-    
-    max-width: 30%;
-    outline: medium none;
-    width: 100%;
-}
-span.itemDateCreated {
-    bottom: 4px;
-    color: #bbbbbb;
-    font-size: 10px !important;
-    left: 108px;
-    position: relative;
-}
-div.itemAuthorText {
-  
-    left: 4px !important;}
-	.galleria-stage{ width: 337px !important;}
-	.galleria-container.touch {
-width: 337px !important;
- height: 304px !important;
-}
-.galleria-image-nav {
-top: 51% !important;
-}.galleria-image img {
-width: 100% !important;
- 
-left: 1px !important;
-}.galleria-info-title {
- 
-font-size: 13px !important;
- 
-}
-}
-
-#jsn-themeclassic-jsgallery-Re1f01JE .galleria-info .galleria-info-text .galleria-info-description {
-font-family: Arial;
-font-size: 18px ! important;
-font-weight: normal;
-text-align: left;
-color: #ffff4a ! important;
+    .galleria-container.notouch {
+        height: 459px !important;
+        width: 288px !important;
+    }
+    .galleria-image-nav-left:after {
+        font-size: 15px !important; 
+        margin-right: 14px !important;
+        margin-top: 11px !important ;
+        padding: 3px;
+    }
+    .galleria-image-nav-left { 
+        width: 70% !important;
+    }
+    .galleria-image-nav-right:after {  
+        font-size: 15px !important;
+        margin-top: 11px;
+        padding: 3px;
+    }
+    .galleria-image-nav-left:after {
+        width: 70px
+    }
+    .galleria-image-nav-right:after {
+        width: 70px;
+    }
+    .galleria-image-nav-right {    
+        width: 30.3% !important;
+    }
+    .galleria-counter {
+        bottom: 10px;  
+        font: bold 21px/1 arial,sans-serif;
+        left: 15px !important;
+    }
+    .jsn-gallery {
+        max-width: 30%;
+        outline: medium none;
+        width: 100%;
+    }
+    .galleria-stage {
+        width: 337px !important;
+    }
+    .galleria-container.touch {
+        width: 337px !important;
+        height: 304px !important;
+    }
+    .galleria-image-nav {
+        top: 51% !important;
+    }
+    .galleria-image img {
+        width: 100% !important;
+        left: 1px !important;
+    }
+    .galleria-info-title {
+        font-size: 13px !important;
+    }
 }
