--- a/plugins/jsnimageshow/themeclassic/assets/js/galleria/themes/classic/galleria.classic.css
+++ b/plugins/jsnimageshow/themeclassic/assets/js/galleria/themes/classic/galleria.classic.css
@@ -2,11 +2,14 @@
 
 #galleria-loader{height:1px!important}
 
+.jsn-container {
+	padding-bottom: 0.8em;
+}
 .galleria-container {
     position: relative;
     overflow: hidden;
     background: #000;
-    border: 1px solid black !important;
+    border: 0.1em solid black !important;
 }
 .galleria-container img {
     -moz-user-select: none;
@@ -19,28 +22,8 @@
     bottom: 60px;
     left: 10px;
     right: 10px;
+    height: 100%;
     overflow:hidden;
-}
-.galleria-thumbnails-container {
-    height: 50px;
-    position: absolute;
-    left: 10px;
-    right: 10px;
-    z-index: 2;
-}
-.galleria-carousel .galleria-thumbnails-list {
-    margin-left: 30px;
-    margin-right: 30px;
-    direction: ltr;
-}
-.galleria-thumbnails .galleria-image {
-    height: 40px;
-    width: 60px;
-    background: #000;
-    margin: 0 5px 0 0;
-    border: 1px solid #000;
-    float: left;
-    cursor: pointer;
 }
 .galleria-counter {
     position: absolute;
@@ -68,10 +51,14 @@
 .galleria-info-text {
     border-bottom: 1px solid black;
     background: #aaaaaa !important;
-    padding: 3px 3px 3px 17px !important;
-    display: none;
+    padding: 0.4em 0.8em 0.4em 0.8em !important;
+    display: table !important;
+	width: 100%;
     height: 100% !important;
     /* IE7 */ zoom:1;
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;         /* Opera/IE 8+ */
 }
 .galleria-info-title {
     margin: 0;
@@ -81,6 +68,10 @@
 .galleria-info-description {
     margin: 0;
     color: yellow !important;
+	font-size: 1.1em !important;
+	height: 100%;
+	vertical-align: middle;
+	display: table-cell;
 }
 .galleria-info-close {
     width: 9px;
@@ -101,88 +92,34 @@
     background-color: #000;
 }
 .galleria-image-nav {
-    position: absolute;
-    top: 50%;
-    margin-top: -62px;
+    display: inline-block;
     width: 100%;
-    height: 62px;
+    height: 14% !important;
     left: 0;
+	bottom: 1px !important;
+	top: auto !important;
+	margin: 0px !important;
+    background-color: #999;
 }
 .galleria-image-nav-left,
 .galleria-image-nav-right {
     cursor: pointer;
-    width: 62px;
-    height: 124px;
     position: absolute;
-    left: 10px;
-    z-index: 2;
-    background-position: 0 46px;
-}
-.galleria-image-nav-right {
-    left: auto;
-    right: 10px;
-    background-position: -254px 46px;
     z-index: 2;
 }
-.galleria-thumb-nav-left,
-.galleria-thumb-nav-right {
-    cursor: pointer;
-    display: none;
-    background-position: -495px 5px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 60px;
-    width: 23px;
-    z-index: 3;
-}
-.galleria-thumb-nav-right {
-    background-position: -578px 5px;
-    border-right: none;
-    right: 0;
-    left: auto;
-}
-
-.galleria-carousel .galleria-thumb-nav-left,
-.galleria-carousel .galleria-thumb-nav-right {
-    display: block;
-}
-.galleria-thumb-nav-left,
-.galleria-thumb-nav-right,
-.galleria-info-link,
-.galleria-info-close,
-.galleria-image-nav-left,
 .galleria-image-nav-right {
-    background-image: url(classic-map.png);
-    background-repeat: no-repeat;
-    margin-top: 163px;
-}
-
-.galleria-image-nav-right:after {
-    background: red;
-    color: #fff !important;
-    content: "Next >>";
-    display: block;
-    font-size: 23px !important;
-    font-weight: bold;
-    margin-top: 6%;
-    text-transform: uppercase;
-    width: 135px;
-}
-.galleria-image-nav-right {
+    right: 0px !important;
     border-top: 1px solid black;
     background-color: #999;
-    height: 50px;
-    width: 24.9% !important;
+    height: 100%;
+    width: 31% !important;
 }
 .galleria-image-nav-left {      
     border-top: 1px solid black;
-    width:75.9% !important;
     background-color: #999;       
-    height: 50px;   
-}
-.galleria-image-nav {
-    top: 68% !important;
+    height: 100%;   
+    left: 0px !important;
+    width: 71% !important;
 }
 .galleria-image-nav-left:after {
     background: red;
@@ -190,12 +127,29 @@
     content: "<< Prev";
     display: block;
     float: right;
-    font-size: 23px !important;
+    font-size: 1.2em !important;
     font-weight: bold;
-    margin-right: 30px;
-    margin-top: 2%;
+    margin-right: 5%;
+    margin-top: 3%;
     text-transform: uppercase;
-    width: 135px;
+    width: 6em;
+	padding-top: 1%;
+	height: 1.4em;
+}
+
+.galleria-image-nav-right:after {
+    background: red;
+    color: #fff !important;
+    content: "Next >>";
+    display: block;
+    font-size: 1.2em !important;
+    font-weight: bold;
+    margin-left: 5%;
+    margin-top: 7%;
+    text-transform: uppercase;
+    width: 6em;
+	padding-top: 1%;
+	height: 1.55em;
 }
 .galleria-stage {
     top: 0px !important;  
@@ -208,59 +162,9 @@
     font-size: 18px !important;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
-    .galleria-container.notouch {
-        height: 459px !important;
-        width: 288px !important;
-    }
-    .galleria-image-nav-left:after {
-        font-size: 15px !important; 
-        margin-right: 14px !important;
-        margin-top: 11px !important ;
-        padding: 3px;
-    }
-    .galleria-image-nav-left { 
-        width: 70% !important;
-    }
-    .galleria-image-nav-right:after {  
-        font-size: 15px !important;
-        margin-top: 11px;
-        padding: 3px;
-    }
-    .galleria-image-nav-left:after {
-        width: 70px
-    }
-    .galleria-image-nav-right:after {
-        width: 70px;
-    }
-    .galleria-image-nav-right {    
-        width: 30.3% !important;
-    }
     .galleria-counter {
         bottom: 10px;  
         font: bold 21px/1 arial,sans-serif;
         left: 15px !important;
+		content: " of ";
     }
-    .jsn-gallery {
-        max-width: 30%;
-        outline: medium none;
-        width: 100%;
-    }
-    .galleria-stage {
-        width: 337px !important;
-    }
-    .galleria-container.touch {
-        width: 337px !important;
-        height: 304px !important;
-    }
-    .galleria-image-nav {
-        top: 51% !important;
-    }
-    .galleria-image img {
-        width: 100% !important;
-        left: 1px !important;
-    }
-    .galleria-info-title {
-        font-size: 13px !important;
-    }
-}
