changed how ad units are centered with blank modules

--- a/templates/t3_blank/css/template.css
+++ b/templates/t3_blank/css/template.css
@@ -3477,7 +3477,7 @@ background-color: #FFFFF0 !important;
 	margin: 0 auto;
 	padding: 10px;
 }
-.ad_unit_leader {
+#blank2BM {
 	margin: 0 auto;
 	width: 320px;
 	height: 50px;
