fixed mobile 300x250 centering

--- a/templates/t3_blank/css/template.css
+++ b/templates/t3_blank/css/template.css
@@ -3473,7 +3473,7 @@ background-color: #FFFFF0 !important;
 }
 .ad_unit div div {
 	margin: 0 auto;
-	padding: 10px;
+	padding: 10px 0;
 }
 #blank2BM {
 	margin: 0 auto;
